fix: `pip-compile` executable sometimes not found

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,8 +26,9 @@ dependencies = ['invoke', "pip-tools"]
 
 [project.optional-dependencies]
 dev = [
+  "edwh",
   "hatch",
-  "python-semantic-release",
+  # "python-semantic-release",
   "black",
 ]
 
