--- a/pyproject.toml
+++ b/pyproject.toml
@@ -105,40 +105,31 @@ all = [
 ]
 
 [tool.black]
-target-version = ["py37"]
+target-version = ["py310"]
 line-length = 120
-skip-string-normalization = true
+skip-string-normalization = false
+
+[tool.isort]
+profile = "black"
 
 [tool.ruff]
-target-version = "py37"
+target-version = "py310"
 line-length = 120
 select = [
-  "A",
-  "ARG",
-  "B",
-  "C",
-  "DTZ",
-  "E",
-  "EM",
-  "F",
-  "FBT",
-  "I",
-  "ICN",
-  "ISC",
-  "N",
-  "PLC",
-  "PLE",
-  "PLR",
-  "PLW",
-  "Q",
-  "RUF",
-  "S",
-  "T",
-  "TID",
-  "UP",
-  "W",
-  "YTT",
+    "F", # pyflake error
+    "E", # pycodestyle error
+    "W", # pycodestyle warning
+    "Q", # quotes
+    "A", # builtins
+    # "C4", # comprehensions - NO: doesn't allow dict()
+    # "RET", # return - NO: annoying
+    "SIM", # simplify
+    "ARG", # unused arguments
+    # "COM", # comma's - NO: annoying
+    # "PTH", # use pathlib - NO: annoying
+    "RUF", # ruff rules
 ]
+
 ignore = [
   # Allow non-abstract empty methods in abstract base classes
   "B027",
@@ -153,6 +144,9 @@ unfixable = [
   # Don't touch unused imports
   "F401",
 ]
+
+[tool.su6]
+directory = "src"
 
 [tool.ruff.isort]
 known-first-party = ["edwh_pipcompile_plugin"]
